@@ -5624,7 +5624,7 @@ directive|ifndef
 name|QT_NO_RUBBERBAND
 end_ifndef
 begin_comment
-comment|/*!     \property QGraphicsView::rubberBandSelectionMode     \brief the behavior for selecting items with a rubber band selection rectangle.     \since 4.3      This property defines how items are selected when using the RubberBandDrag     drag mode.      The default value is Qt::IntersectsItemShape; all items whose shape     intersects with or is contained by the rubber band are selected.      \sa dragMode, items() */
+comment|/*!     \property QGraphicsView::rubberBandSelectionMode     \brief the behavior for selecting items with a rubber band selection rectangle.     \since 4.3      This property defines how items are selected when using the RubberBandDrag     drag mode.      The default value is Qt::IntersectsItemShape; all items whose shape     intersects with or is contained by the rubber band are selected.      \sa dragMode, items(), rubberBandRect() */
 end_comment
 begin_function
 DECL|function|rubberBandSelectionMode
@@ -5674,6 +5674,55 @@ name|rubberBandSelectionMode
 operator|=
 name|mode
 expr_stmt|;
+block|}
+end_function
+begin_comment
+comment|/*!    \since 5.1    This functions returns the current rubber band area (in viewport coordinates) if the user    is currently doing an itemselection with rubber band. When the user is not using the    rubber band this functions returns (a null) QRectF().     Notice that part of this QRect can be outise the visual viewport. It can e.g    contain negative values.     \sa rubberBandSelectionMode */
+end_comment
+begin_function
+DECL|function|rubberBandRect
+name|QRect
+name|QGraphicsView
+operator|::
+name|rubberBandRect
+parameter_list|()
+specifier|const
+block|{
+name|Q_D
+argument_list|(
+specifier|const
+name|QGraphicsView
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|d
+operator|->
+name|dragMode
+operator|!=
+name|QGraphicsView
+operator|::
+name|RubberBandDrag
+operator|||
+operator|!
+name|d
+operator|->
+name|sceneInteractionAllowed
+operator|||
+operator|!
+name|d
+operator|->
+name|rubberBanding
+condition|)
+return|return
+name|QRect
+argument_list|()
+return|;
+return|return
+name|d
+operator|->
+name|rubberBandRect
+return|;
 block|}
 end_function
 begin_endif
