@@ -104,10 +104,25 @@ block|{
 public|public:
 DECL|function|MyGraphicsView
 name|MyGraphicsView
-parameter_list|()
+parameter_list|(
+name|QWidget
+modifier|*
+name|w
+parameter_list|,
+name|QLabel
+modifier|*
+name|l
+parameter_list|)
 member_init_list|:
 name|QGraphicsView
-argument_list|()
+argument_list|(
+name|w
+argument_list|)
+member_init_list|,
+name|rubberbandLabel
+argument_list|(
+name|l
+argument_list|)
 block|{
 name|setDragMode
 argument_list|(
@@ -232,7 +247,92 @@ operator|+
 literal|10
 argument_list|)
 expr_stmt|;
+name|updateRubberbandInfo
+argument_list|()
+expr_stmt|;
 block|}
+DECL|function|mouseReleaseEvent
+name|void
+name|mouseReleaseEvent
+parameter_list|(
+name|QMouseEvent
+modifier|*
+name|event
+parameter_list|)
+block|{
+name|QGraphicsView
+operator|::
+name|mouseReleaseEvent
+argument_list|(
+name|event
+argument_list|)
+expr_stmt|;
+name|updateRubberbandInfo
+argument_list|()
+expr_stmt|;
+block|}
+DECL|function|wheelEvent
+name|void
+name|wheelEvent
+parameter_list|(
+name|QWheelEvent
+modifier|*
+name|event
+parameter_list|)
+block|{
+name|QGraphicsView
+operator|::
+name|wheelEvent
+argument_list|(
+name|event
+argument_list|)
+expr_stmt|;
+name|updateRubberbandInfo
+argument_list|()
+expr_stmt|;
+block|}
+DECL|function|updateRubberbandInfo
+name|void
+name|updateRubberbandInfo
+parameter_list|()
+block|{
+name|QString
+name|textToShow
+decl_stmt|;
+name|QDebug
+name|s
+argument_list|(
+operator|&
+name|textToShow
+argument_list|)
+decl_stmt|;
+name|s
+operator|<<
+name|rubberBandRect
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|rubberbandLabel
+operator|->
+name|text
+argument_list|()
+operator|!=
+name|textToShow
+condition|)
+name|rubberbandLabel
+operator|->
+name|setText
+argument_list|(
+name|textToShow
+argument_list|)
+expr_stmt|;
+block|}
+DECL|member|rubberbandLabel
+name|QLabel
+modifier|*
+name|rubberbandLabel
+decl_stmt|;
 block|}
 class|;
 end_class
@@ -258,9 +358,65 @@ argument_list|,
 name|argv
 argument_list|)
 decl_stmt|;
-name|MyGraphicsView
-name|v
+name|QWidget
+name|w
 decl_stmt|;
+name|w
+operator|.
+name|setLayout
+argument_list|(
+operator|new
+name|QVBoxLayout
+argument_list|)
+expr_stmt|;
+name|QLabel
+modifier|*
+name|l
+init|=
+operator|new
+name|QLabel
+argument_list|(
+operator|&
+name|w
+argument_list|)
+decl_stmt|;
+name|MyGraphicsView
+modifier|&
+name|v
+init|=
+operator|*
+operator|(
+operator|new
+name|MyGraphicsView
+argument_list|(
+operator|&
+name|w
+argument_list|,
+name|l
+argument_list|)
+operator|)
+decl_stmt|;
+name|w
+operator|.
+name|layout
+argument_list|()
+operator|->
+name|addWidget
+argument_list|(
+operator|&
+name|v
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|layout
+argument_list|()
+operator|->
+name|addWidget
+argument_list|(
+name|l
+argument_list|)
+expr_stmt|;
 name|QGraphicsScene
 name|s
 argument_list|(
@@ -393,7 +549,7 @@ name|item
 argument_list|)
 expr_stmt|;
 block|}
-name|v
+name|w
 operator|.
 name|show
 argument_list|()
